--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
   "dependencies": {
     "@types/prompt-sync": "^4.1.0",
     "@types/ws": "^7.2.7",
+    "edc-ws": "^0.1.4",
     "prompt-sync": "^4.2.0",
-    "readline": "^1.3.0",
-    "ws": "^7.3.1",
-    "edc-ws": "1.0.0"
+    "readline": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
